force-app/main/default/objects/xDO_TTHAIR_Flight__c/xDO_TTHAIR_Flight__c.object-meta.xml
<CustomObject>
    <label>TTH Flight Schedule</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>Flight Entry#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>