force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_Arrival_City__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Arrival_City__c</fullName>
    <label>Arrival City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>