force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <type>DateTime</type>
</CustomField>