force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Departure_Time__c</fullName>
    <label>Departure Time</label>
    <type>DateTime</type>
</CustomField>