force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_Flight__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Flight__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Flight Number</label>
    <referenceTo>xDO_TTHAIR_FlightNumber__c</referenceTo>
    <relationshipName>Flight_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>