force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_Flight_Name__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Flight_Name__c</fullName>
    <formula>xDO_TTHAIR_Flight__r.xDO_TTHAIR_Flight_Name__c +&apos; - &apos;+  xDO_TTHAIR_Flight__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Name</label>
    <type>Text</type>
</CustomField>