force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_FlightNumber__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_FlightNumber__c</fullName>
    <formula>xDO_TTHAIR_Flight__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight#</label>
    <type>Text</type>
</CustomField>