force-app/main/default/objects/xDO_TTHAIR_Flight__c/fields/xDO_TTHAIR_Price__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>