force-app/main/default/objects/xDO_TTHAIR_Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_TTHAIR_DEP_CODE__c</columns>
    <columns>xDO_TTHAIR_Departure_Time__c</columns>
    <columns>xDO_TTHAIR_ARR_CODE__c</columns>
    <columns>xDO_TTHAIR_Arrival_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>